--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,13 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:acv_lines_count="10"
+        app:acv_lines_width="6dp"
+        app:acv_lines_space="6dp"
+        app:acv_sections_count="20"
+        app:acv_sections_space="1dp"
+        app:acv_icon_size="12dp"
+        app:acv_mid_start_extra_offset="12dp"
         />
 
 
