--- a/arcchartview/src/main/res/values/attrs.xml
+++ b/arcchartview/src/main/res/values/attrs.xml
@@ -12,6 +12,7 @@
         <attr name="acv_mid_start_extra_offset" format="dimension"/>
 
         <attr name="acv_icon_size" format="dimension"/>
+        <attr name="acv_icon_margin" format="dimension"/>
 
         <attr name="acv_bg_color" format="color"/>
     </declare-styleable>
