--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
         app:acv_sections_space="2dp"
         app:acv_icon_size="32dp"
         app:acv_mid_start_extra_offset="12dp"
+        android:padding="8dp"
         />
 
 
