Change in demo app to reflect modification in library Adding a DefaultTouchListener so seekbar not needed anymore out of the box (can be ameliorate somehow). Adding a counter/limiter showing in the middle Rename some methods

--- a/arcchartview/src/main/res/values/attrs.xml
+++ b/arcchartview/src/main/res/values/attrs.xml
@@ -15,6 +15,9 @@
         <attr name="acv_icon_margin" format="dimension"/>
 
         <attr name="acv_bg_color" format="color"/>
+
+        <attr name="acv_counter" format="boolean"/>
+        <attr name="acv_counter_max" format="integer"/>
     </declare-styleable>
     
 </resources>
