--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,68 +66,10 @@
         android:id="@+id/sb_attrsValue"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toTopOf="@id/view_separator2"
-        />
-
-
-    <View
-        android:id="@+id/view_separator2"
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:background="#000"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/sp_sections"
-        />
-
-
-
-    <TextView
-        android:id="@+id/tv_sectionText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Section : "
-        android:textColor="#000"
-        app:layout_constraintTop_toTopOf="@id/sp_sections"
-        app:layout_constraintBottom_toBottomOf="@id/sp_sections"
-        app:layout_constraintLeft_toLeftOf="@id/tv_valueText"
-        />
-
-    <Spinner
-        android:id="@+id/sp_sections"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/sb_sectionsValue"
-        app:layout_constraintLeft_toRightOf="@id/tv_sectionText"
-        app:layout_constraintRight_toRightOf="parent"
-        />
-
-
-    <TextView
-        android:id="@+id/tv_valueText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Value : "
-        android:textColor="#000"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_margin="8dp"
-        />
-
-
-    <SeekBar
-        android:id="@+id/sb_sectionsValue"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintLeft_toRightOf="@id/tv_valueText"
-        app:layout_constraintTop_toTopOf="@id/tv_valueText"
-        app:layout_constraintBottom_toBottomOf="@id/tv_valueText"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginBottom="16dp"
-        />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
