--- a/arcchartview/src/main/res/values/attrs.xml
+++ b/arcchartview/src/main/res/values/attrs.xml
@@ -15,6 +15,8 @@
         <attr name="acv_icon_margin" format="dimension"/>
 
         <attr name="acv_start_degree_offset" format="float"/>
+
+        <attr name="acv_allow_setting_value_by_touch" format="boolean"/>
     </declare-styleable>
     
 </resources>
